# rust_learn

./: .gitignore  Cargo.toml  LICENSE  README.md  rust_practice.md
examples/my_try/: Cargo.toml  log.txt
examples/my_try/src/: main.rs
examples/tour/: Cargo.toml
exercises/: quiz1.rs  quiz3.rs
exercises/collections/: hashmap1.rs  hashmap2.rs  vec2.rs
exercises/enums/: enums2.rs  enums3.rs
exercises/functions/: functions1.rs
exercises/generics/: generics3.rs
exercises/macros/: macros4.rs
exercises/primitive_types/: primitive_types3.rs
exercises/standard_library_types/: box1.rs  iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
exercises/structs/: structs1.rs  structs3.rs
exercises/traits/: traits1.rs
my_grep/: test.txt
my_grep/src/: main.rs
my_move_records/: Cargo.toml
my_move_records/src/: main.rs
stm32f407/: ocd-stm32.cfg
stm32f407/first_try/: Cargo.toml  debug.cfg  memory.x
stm32f407/first_try/.cargo/: config.toml
stm32f407/first_try/src/: main.rs
style/src/: theme.rs
