[package]
name = "my_try"
version = "0.1.0"
authors = ["firesunny0"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ! what is features
iced = { path = "../..", features = ["image", "debug"] }
env_logger = "0.9.3"
log = "0.4"
