[package]
name = "first_try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.3.7"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
stm32f4 = { version = "0.15.1", features = ["stm32f407", "rt"] }
